gloo/manifests/namespace-petstore.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: petstore
  name: petstore
spec:
  finalizers:
  - kubernetes
