gloo/manifests/service-petstore.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: petstore
  labels:
    service: petstore
    discovery.solo.io/function_discovery: enabled
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: petstore
